# StarForge

./: .gitignore  .gitmodules  CMakeLists.txt  license.txt  mingw-w64-x86_64.cmake  readme.md  settings.ini  vcpkg.json
.github/workflows/: build.yml
include/: GenUtil.hpp  ImGuizmo.h  LightConfigs.hpp  ModelCache.hpp  ResUtil.hpp  UApplication.hpp  UAreaRenderer.hpp  UCamera.hpp  UGrid.hpp  UInput.hpp  UPathRenderer.hpp  UPointSpriteManager.hpp  UProject.hpp  UStarForgeApplication.hpp  UStarForgeContext.hpp  ini.h
include/DOM/: AreaObjectDOMNode.hpp  AstroObjectDOMNode.hpp  BlackHoleDOMNode.hpp  BooDOMNode.hpp  DOMNodeBase.hpp  DOMNodeSerializable.hpp  GalaxyDOMNode.hpp  ObjectDOMNode.hpp  PathDOMNode.hpp  PlanetDOMNode.hpp  ScenarioDOMNode.hpp  SoundObjectDOMNode.hpp  StartDOMNode.hpp  TicoDOMNode.hpp  ToadDOMNode.hpp  ZoneDOMNode.hpp
include/io/: BcsvIO.hpp  KclIO.hpp
include/util/: UTime.hpp  UUIUtil.hpp
lib/: CMakeLists.txt  imgui.cmake
res/: objectdb.json
src/: GenUtil.cpp  ImGuizmo.cpp  LightConfigs.cpp  ModelCache.cpp  ResUtil.cpp  UApplication.cpp  UAreaRenderer.cpp  UCamera.cpp  UInput.cpp  UPathRenderer.cpp  UPointSpriteManager.cpp  UProject.cpp  UStarForgeApplication.cpp  UStarForgeContext.cpp  main.cpp
src/DOM/: AreaObjectDOMNode.cpp  AstroObjectDOMNode.cpp  BlackHoleDOMNode.cpp  BooDOMNode.cpp  DOMNodeBase.cpp  DOMNodeSerializable.cpp  GalaxyDOMNode.cpp  ObjectDOMNode.cpp  PathDOMNode.cpp  PlanetDOMNode.cpp  ScenarioDOMNode.cpp  SoundObjectDOMNode.cpp  StartDOMNode.cpp  TicoDOMNode.cpp  ToadDOMNode.cpp  ZoneDOMNode.cpp
src/io/: BcsvIO.cpp  KclIO.cpp
